--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "echarts": "^3.6.2",
     "element-ui": "^1.3.7",
     "vue": "^2.3.3",
+    "vue-awesome": "^2.3.1",
     "vue-router": "^2.6.0"
   },
   "devDependencies": {
