--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "element-ui": "^1.3.7",
     "vue": "^2.3.3",
     "vue-awesome": "^2.3.1",
-    "vue-router": "^2.6.0"
+    "vue-router": "^2.6.0",
+    "vue2-editor": "^2.0.26"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
