修改项目描述

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "monkey-pc",
   "version": "1.0.0",
-  "description": "小猴说事-pc版",
+  "description": "小猴说事-pc公司中心",
   "author": "Moer",
   "private": true,
   "scripts": {
