--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue": "^2.3.3",
     "vue-awesome": "^2.3.1",
     "vue-router": "^2.6.0",
-    "vue2-editor": "^2.0.26"
+    "vue2-editor": "^2.0.26",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
