--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-polyfill": "^6.23.0",
     "echarts": "^3.6.2",
     "element-ui": "^1.4.0",
     "promise-polyfill": "^6.0.2",
